--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,7 @@
             <div class="table-cell"><img src="./south-hills-logo-footer.png" height="auto" width="200"></div>
         </div>
     </div>
-    
+    <img src="./スクリーンショット 2022-12-12 14.13.49.png">
+
+    <div> style="display-none-example" </div>
 </html>
