--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,10 @@
     </div>
     <img src="./スクリーンショット 2022-12-12 14.13.49.png">
 
-    <div> style="display-none-example" </div>
+    <div class = "container display-block-example" >
+        <span class="circle color1"></span>
+        <span class="circle color2"></span>
+        <span class="circle color3"></span>
+    </div>
+
 </html>
